# cerveurus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: HTTP_Server.h  Response.h  Routes.h  SQL.h  SortedArray.h
sql/: sample.sql
src/: CMakeLists.txt  HTTP_Server.c  Response.c  Routes.c  SQL.c  SortedArray.c  main.c
templates/: about.html  chicken.html  index.html  sth.html
test/: CMakeLists.txt  param_parser.c
